add scroll behaviour with chassis position with key controls and some useful commented code for save

--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,16 @@ body,
   border-radius: 5px;
   opacity: 0.8;
 }
+
+/* .scroll-window {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden auto;
+}
+.scroll-window > div {
+  width: 100%;
+  height: 200%;
+} */
